# Waveplayer

./: README.md
waveplayer/: ABOUT-WAVEPLAYER.txt  Cargo.toml  README.md
waveplayer/src/: audio.rs  config.rs  ipc.rs  main.rs  ui.rs  waveform.rs
